--- a/hotelex/assets/html/pagina_inicial.html
+++ b/hotelex/assets/html/pagina_inicial.html
@@ -19,8 +19,8 @@
         <h1-2>Encontre as melhores ofertas em hotéis...</h1-2>
         <h1-3>Anuncie sua propriedade</h1-3>
         <div class="user-cont">
-            <i class="fa-solid fa-circle-user"></i>
-            <i class="fa-regular fa-circle-user"></i>
+            <h1-4>CADASTRE-SE</h1-4>
+            <h1-4>LOGIN</h1-4>
         </div>
         <div class="logo">
             <img src="../images/Logo_Hotelex-removebg-preview_1.png"alt="loguex"/>
