--- a/hotelex/assets/html/dados_propri.html
+++ b/hotelex/assets/html/dados_propri.html
@@ -52,32 +52,63 @@
           <label id='labelcomodi' for='comodidades'>COMODIDADES OFERECIDAS (EX. PISCINAS, WIFI)</label>
           
         </div>
-        <div class="testezex">
+        <!-- <div class="testezex">
+          <div class="info">
+            <i class="fa-solid fa-circle-info"></i>
+            <i class="fa-solid fa-circle-info"></i>
+            <i class="fa-solid fa-circle-info"></i>
+            <i class="fa-solid fa-circle-info"></i>
+          </div>
           <div class="content-tooltips">
-            <a href="#">
-              <i class="fa-solid fa-circle-info" style="color: #000000;font-size: 40px;position:absolute; right: 110px;top: 586px;"></i>
-            </a>
             <span class="tooltip-text">Descreve seu hotel mencionando a localidade.</span>
           </div>
-          <div class="content-tooltips2">
-            <a href="#">
-              <i class="fa-solid fa-circle-info" style="color: #000000;font-size: 40px;position:absolute; right: 110px;top: 717px;"></i>
-            </a>
-            <span class="tooltip-text2">Descreve como sao os quartos.</span>
+          <div class="content-tooltips">
+            <span class="tooltip-text">Descreve como sao os quartos.</span>
           </div>
-          <div class="content-tooltips3">
-            <a href="#">
-              <i class="fa-solid fa-circle-info" style="color: #000000;font-size: 40px;position:absolute; right: 110px;top: 846px;"></i>
-            </a>
-            <span class="tooltip-text3">Detalhes sobre o procedimento de reserva e cancelamento.</span>
+          <div class="content-tooltips">
+            <span class="tooltip-text">Detalhes sobre o procedimento de reserva e cancelamento.</span>
           </div>
-          <div class="content-tooltips4">
-            <a href="#">
-              <i class="fa-solid fa-circle-info" style="color: #000000;font-size: 40px;position:absolute; right: 110px;top: 976px;"></i>
-            </a>
-            <span class="tooltip-text4">Informações adicionais sobre os tipos de acomodações.</span>
+          <div class="content-tooltips">
+            <span class="tooltip-text">Informações adicionais sobre os tipos de acomodações.</span>
           </div>
-        </div>
+        </div> -->
+        <div class="testezex">
+          <div class="tooltip-container">
+              <div class="info">
+                  <i class="fa fa-solid fa-circle-info"></i>
+              </div>
+              <div class="content-tooltips">
+                  <span class="tooltip-text">Descreve seu hotel mencionando a localidade.</span>
+              </div>
+          </div>
+  
+          <div class="tooltip-container">
+              <div class="info">
+                  <i class="fa fa-solid fa-circle-info"></i>
+              </div>
+              <div class="content-tooltips">
+                  <span class="tooltip-text">Descreve como são os quartos.</span>
+              </div>
+          </div>
+  
+          <div class="tooltip-container">
+              <div class="info">
+                  <i class="fa fa-solid fa-circle-info"></i>
+              </div>
+              <div class="content-tooltips">
+                  <span class="tooltip-text">Detalhes sobre o procedimento de reserva e cancelamento.</span>
+              </div>
+          </div>
+  
+          <div class="tooltip-container">
+              <div class="info">
+                  <i class="fa fa-solid fa-circle-info"></i>
+              </div>
+              <div class="content-tooltips">
+                  <span class="tooltip-text">Informações adicionais sobre os tipos de acomodações.</span>
+              </div>
+          </div>
+      </div>
         <div class='label-float3'>
           <input type='text' id='email2' paceholder='' required>
           <label id='labelConfirmSenha' for='email2'>EMAIL</label>
