--- a/hotelex/assets/html/pagina_inicial.html
+++ b/hotelex/assets/html/pagina_inicial.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/pagina_inicial.css">
     <link rel="stylesheet" type="text/css" href="../fontawesome/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
     <title>Página inicial</title>
 </head>
 <body>
@@ -46,6 +47,33 @@
         <div class="topicos">
 
         </div>
+        <div class="quadradex">
+            <div class="box">
+                <img src="../images/21_human_robot_brains.jpg" alt="Imagem 1">
+                <div class="text"><h3-1>A partir de</h3-1></div>
+                <div class="ofertex"><h3>Ofertas especiais</h3></div>
+                <div class="preço"><h3-2>R$ 222</h3-2></div>
+            </div>
+            <div class="box">
+                <img src="../images/ecologia.jpg" alt="Imagem 2">
+                <div class="text"><h3-1>A partir de</h3-1></div>
+                <div class="ofertex"><h3>Ofertas especiais</h3></div>
+                <div class="preço"><h3-2>R$ 300</h3-2></div>
+            </div>
+            <div class="box">
+                <img src="../images/Globalização.JPG" alt="Imagem 3">
+                <div class="text"><h3-1>A partir de</h3-1></div>
+                <div class="ofertex"><h3>Ofertas especiais</h3></div>
+                <div class="preço"><h3-2>R$ 180</h3-2></div>
+            </div>
+            <div class="box">
+                <img src="../images/lillard.jpg" alt="Imagem 4">
+                <div class="text"><h3-1>A partir de</h3-1></div>
+                <div class="ofertex"><h3>Ofertas especiais</h3></div>
+                <div class="preço"><h3-2>R$ 400</h3-2></div>
+            </div>
+        </div>
+        <div class="ofertex2"><h3>Ver ofertas</h3></div>
         <script src="../js/anuncia.js"></script>
     </div>
 </body>
