--- a/hotelex/assets/html/pagina_inicial.html
+++ b/hotelex/assets/html/pagina_inicial.html
@@ -159,6 +159,11 @@
             <li>Preferências de cookies</li>
             <li>Avisos de privacidade</li>
         </ul>
+        <div class="social_media">
+            <i class="fa-brands fa-square-x-twitter"></i>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-square-instagram"></i>
+        </div>
         <script src="../js/anuncia.js"></script>
     </div>
 </body>
