--- a/hotelex/assets/html/signin.html
+++ b/hotelex/assets/html/signin.html
@@ -36,8 +36,8 @@
               </div>
               <!--Fim de slide-->
 
-              <!--Navigacao auto-->
-              <div class="navigacao-auto">
+              <!--navegacao auto-->
+              <div class="navegacao-auto">
                 <div class="auto-btn1"></div>
                 <div class="auto-btn2"></div>
                 <div class="auto-btn3"></div>
@@ -46,7 +46,7 @@
 
             </div>
 
-            <div class= "manual-navigacao">
+            <div class= "manual-navegacao">
               <label for="radio1" class="manual-btn"></label>
               <label for="radio2" class="manual-btn"></label>
               <label for="radio3" class="manual-btn"></label>
@@ -60,7 +60,6 @@
         </header>
         <div class="ladex">
           <h2> Hotelex</h2> <br>
-          <span>RESERVE SEU REFÚGIO PERFEITO, ONDE CADA ESTADIA SE TORNA UMA EXPERIÊNCIA<BR> INESQUECÍVEL!</span>
             
           <ul> 
             <k2><a href= "./signup.html">Condições de uso</a><br>
@@ -106,7 +105,7 @@
             <div class='rede-sociais'> 
               <c>
                   OU USE UMA DAS SEGUINTES OPÇÕES
-                </c>
+              </c>
                 
               </div>
               <div class='justify-center'>
