pag.ini_com_link

--- a/hotelex/assets/html/pagina_inicial.html
+++ b/hotelex/assets/html/pagina_inicial.html
@@ -22,10 +22,10 @@
         <div class="logo">
             <img src="../images/Logo_Hotelex-removebg-preview_1.png"alt="loguex"/>
             <div class="user-cont">
-                <h1-4>CADASTRE-SE</h1-4>
-                <h1-4>LOGIN</h1-4>
+                <a href= "signup.html"><h1-4>CADASTRE-SE</h1-4></a>
+                <a href= "signin.html"><h1-4>LOGIN</h1-4></a>
             </div>
-            <h1-3>Anuncie sua propriedade</h1-3>
+            <a href= "./anuncia.html"><h1-3>Anuncie sua propriedade</h1-3></a>
         </div>
         
         <div class="card2">
