--- a/hotelex/assets/html/pagamentex.html
+++ b/hotelex/assets/html/pagamentex.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="../css/pagamentex.css">
+      <link rel="stylesheet" href="../css/ficha_do_hotel.css">
       <link rel="stylesheet" type="text/css" href="../fontawesome/css/all.min.css">
       <title>Home</title>
   </head>
@@ -15,8 +15,8 @@
             <i class="fa-light fa-reply"></i>
             </header>
             <div class="ladex">
-            <h2> Hotelex</h2> <br>
-            <span>RESERVE SEU REFÚGIO PERFEITO, ONDE CADA ESTADIA SE TORNA UMA EXPERIÊNCIA INESQUECÍVEL!</span>
+                <h2> Hotelex</h2> <br><br>
+                <span>RESERVE SEU REFÚGIO PERFEITO, ONDE CADA ESTADIA SE TORNA UMA EXPERIÊNCIA INESQUECÍVEL!</span>
             </div>
             <div class='container'>
             <div class='card'>
@@ -36,7 +36,20 @@
                         <div class="radiex">
                             <label>
                                 <input type="radio" name="devweb" value="frontend" checked>
-                                <i class="fa-regular fa-credit-card" style="color: #fff;"></i ><h3> Crédito (em até 5x sem juros) </h3>
+                                <i class="fa-regular fa-credit-card" style="color: #fff;"></i >
+                                    <!-- <h3> Crédito (em até 5x sem juros) </h3> -->
+                                        <!-- <label for="qtdquarto"><h3>Crédito</h3></label> -->
+                                        <h3>Crédito</h3>
+                                    <div class="opcoes_credito">
+                                        <select id="qtdjuros" required>
+                                          <option selected disabled value=""> Em até (5x sem juros)</option>
+                                          <option>(5x sem juros)</option>
+                                          <option>(4x sem juros)</option>
+                                          <option>(3x sem juros)</option>
+                                          <option>(2x sem juros)</option>
+                                          <option>(1x sem juros)</option>
+                                        </select>
+                                    </div>
                             </label>
                             <label>
                                 <input type="radio" name="devweb" value="frontend"checked>
@@ -49,7 +62,6 @@
                         </div>
                     </div>
                 </div>
-                
                 <div class='justify-center'>
                 <button>Assinar</button>
                 </div>
