--- a/hotelex/assets/html/pagina_inicial.html
+++ b/hotelex/assets/html/pagina_inicial.html
@@ -104,7 +104,7 @@
                 <img src="../images/Hotel_Centro.png" alt="Imagem 8" class="custom-size4">
                 <div class="text"><h5-2-1>9.0/10</h5-2-1></div>
                 <div class="text"><h5-2-2>Maravilhosa (182 avaliações)</h5-2-2></div>
-                <div class="text"><h5-2-3>Hotel Campinas</h5-2-3></div>
+                <div class="text"><h5-2-3>Hotel Centro</h5-2-3></div>
                 <div class="text"><h5-2-4>R$ 389</h5-2-4></div>
                 <div class="text"><h5-2-5>por diária 
                     (inclui impostos e taxas)</h5-2-5></div>
@@ -114,7 +114,7 @@
                 <img src="../images/Hotel_Brasil.png" alt="Imagem 8" class="custom-size4">
                 <div class="text"><h5-2-1>9.0/10</h5-2-1></div>
                 <div class="text"><h5-2-2>Maravilhosa (182 avaliações)</h5-2-2></div>
-                <div class="text"><h5-2-3>Hotel Campinas</h5-2-3></div>
+                <div class="text"><h5-2-3>Hotel Brasil</h5-2-3></div>
                 <div class="text"><h5-2-4>R$ 389</h5-2-4></div>
                 <div class="text"><h5-2-5>por diária 
                     (inclui impostos e taxas)</h5-2-5></div>
@@ -124,7 +124,7 @@
                 <img src="../images/Hotel_Collection.png" alt="Imagem 8" class="custom-size4">
                 <div class="text"><h5-2-1>9.0/10</h5-2-1></div>
                 <div class="text"><h5-2-2>Maravilhosa (182 avaliações)</h5-2-2></div>
-                <div class="text"><h5-2-3>Hotel Campinas</h5-2-3></div>
+                <div class="text"><h5-2-3>Hotel Collection</h5-2-3></div>
                 <div class="text"><h5-2-4>R$ 389</h5-2-4></div>
                 <div class="text"><h5-2-5>por diária 
                     (inclui impostos e taxas)</h5-2-5></div>
