--- a/hotelex/assets/html/dados_propri.html
+++ b/hotelex/assets/html/dados_propri.html
@@ -40,7 +40,7 @@
           <input id="telefone" type="text" paceholder="" maxlength="11" required>
           <label id='labelTelefone' for='telefone'>TELEFONE</label>
           <input id="site" type="text" paceholder="" required>
-          <label id='labelcnpj' for='cnpj'>CNPJ</label>
+          <label id='labelsite' for='site'>SITE OFICIAL (Opcional)</label>
         </div>
         <div class='label-float2'>
           <textarea type="text" id="desc" rows="5" cols="30"></textarea>
