--- a/hotelex/assets/html/signin.html
+++ b/hotelex/assets/html/signin.html
@@ -23,21 +23,21 @@
 
               <!--slide imagens-->
               <div class="slide first">
-                <img src="../images/nature-3082832_1280.jpg"alt="Imagem 1"/>
+                <img src="../images/Screenshot_2615.png"alt="Imagem 1"/>
               </div>
               <div class="slide">
-                <img src="../images/water-839590_1280.jpg"alt="Imagem 2"/>
+                <img src="../images/Screenshot_2616.png"alt="Imagem 2"/>
               </div>
               <div class="slide">
-                <img src="../images/polynesia-3021072_1280.jpg"alt="Imagem 3"/>
+                <img src="../images/Screenshot_2617.png"alt="Imagem 3"/>
               </div>
               <div class="slide">
-                <img src="../images/road-1072821_1280.jpg"alt="Imagem 4"/>
+                <img src="../images/Screenshot_2618.png"alt="Imagem 4"/>
               </div>
               <!--Fim de slide-->
 
               <!--navegacao auto-->
-              <div class="navegacao-auto">
+              <div class="navigacao-auto">
                 <div class="auto-btn1"></div>
                 <div class="auto-btn2"></div>
                 <div class="auto-btn3"></div>
@@ -46,7 +46,7 @@
 
             </div>
 
-            <div class= "manual-navegacao">
+            <div class= "manual-navigacao">
               <label for="radio1" class="manual-btn"></label>
               <label for="radio2" class="manual-btn"></label>
               <label for="radio3" class="manual-btn"></label>
@@ -60,7 +60,7 @@
         </header>
         <div class="ladex">
           <h2> Hotelex</h2> <br>
-            
+          <span>RESERVE SEU REFÚGIO PERFEITO, ONDE CADA ESTADIA SE TORNA UMA EXPERIÊNCIA<BR> INESQUECÍVEL!</span>
           <ul> 
             <k2><a href= "./signup.html">Condições de uso</a><br>
             <a href= "./signup.html">Preferências de cookies</a><br>
