--- a/hotelex/assets/html/signup.html
+++ b/hotelex/assets/html/signup.html
@@ -32,16 +32,16 @@
 
           <!--slide imagens-->
           <div class="slide first">
-            <img src="../images/nature-3082832_1280.jpg"alt="Imagem 1"/>
+            <img src="../images/Screenshot_2615.png"alt="Imagem 1"/>
           </div>
           <div class="slide">
-            <img src="../images/water-839590_1280.jpg"alt="Imagem 2"/>
+            <img src="../images/Screenshot_2617.png"alt="Imagem 2"/>
           </div>
           <div class="slide">
-            <img src="../images/polynesia-3021072_1280.jpg"alt="Imagem 3"/>
+            <img src="../images/Screenshot_2617.png"alt="Imagem 3"/>
           </div>
           <div class="slide">
-            <img src="../images/road-1072821_1280.jpg"alt="Imagem 4"/>
+            <img src="../images/Screenshot_2618.png"alt="Imagem 4"/>
           </div>
           <!--Fim de slide-->
 
@@ -65,7 +65,6 @@
       </div>
     </div>
     <header>
-      <i class="fa-light fa-reply"></i>
     </header>
     <div class="ladex">
       <h2> Hotelex</h2> <br>
