--- a/hotelex/assets/html/signin.html
+++ b/hotelex/assets/html/signin.html
@@ -96,12 +96,16 @@
                   <a href="./signup.html">
                     Cadastre-se
                   </a>
+                  <br>
+                  Ou volte para o ínicio:
+                  <a href="./pagina_inicial.html">
+                    Home
+                  </a>
             </p>
             <br>
 
             <div class='justify-center'>
             </div>
-            <br>
             <div class='rede-sociais'> 
               <c>
                   OU USE UMA DAS SEGUINTES OPÇÕES
