--- a/hotelex/assets/html/signup.html
+++ b/hotelex/assets/html/signup.html
@@ -110,6 +110,10 @@
               <a href="./signin.html">
                 Log-In
               </a>
+              <br>
+              <a href="./pagina_inicial.html">
+                Voltar para a página inicial
+              </a>
         </p>
         <br>
         <div class='justify-center'>
