--- a/hotelex/assets/html/dados_propri.html
+++ b/hotelex/assets/html/dados_propri.html
@@ -129,6 +129,11 @@
           new MultiSelectTag('frutas2')
           new MultiSelectTag('frutas')  // id
       </script>
+      <p>
+        <a href="./pagina_inicial.html">
+          Tela Inicial
+        </a>
+      </p>
         <div class="file-list" id="fileList"></div>
         <div class='justify-center'>
           <button onclick='entrar()'>CADASTRAR</button>
