--- a/hotelex/assets/html/signup.html
+++ b/hotelex/assets/html/signup.html
@@ -86,15 +86,15 @@
           <div id="msgSuccess"></div>
           
           <div class='label-float'>
-            <input type='email' id='email' paceholder='' required>
+            <input type='email' id='email' name="email" paceholder='' required>
             <label id='labelemail' for='email'>EMAIL</label>
-            <input type="tel" autocomplete="off" id="cpf" maxlength="14" paceholder='' required onkeyup="mascara_cpf()">
+            <input type="tel" autocomplete="off" id="cpf" name="cpf" maxlength="14" paceholder='' required onkeyup="mascara_cpf()">
             <label id='labelcpf' for='cpf'>CPF</label>
-            <input type='NomeCompleto' id='nome' paceholder='tt' required>
+            <input type='NomeCompleto' id='nome' name="nome" paceholder='tt' required>
             <label id='labelNome' for='nome'>NOME COMPLETO</label>
           </div>
           <div class='label-float'>
-            <input type='password' id='senha' paceholder='' required>
+            <input type='password' id='senha' name="senha" paceholder='' required>
             <label id='labelSenha' for='senha'>SENHA</label>
             <i class="fa fa-eye" aria-hidden="true"></i>
             <!--<i class="fa fa-eye" aria-hidden="true"></i>-->
@@ -104,7 +104,8 @@
               <label id='labelConfirmSenha' for='confirmSenha'>CONFIRME SUA SENHA</label>
             </div>
           <div class='justify-center'>
-            <button onclick='cadastrar()'>CADASTRAR</button>
+            <!-- <button onclick='cadastrar()' name="submit">CADASTRAR</button> -->
+            <input class="submitex" type="submit" name="submit" value="Enviar">
           </div>
           <p>
                 Já tem conta?
