hotelex_volta_pag_incial

--- a/hotelex/assets/html/dados_propri.html
+++ b/hotelex/assets/html/dados_propri.html
@@ -14,7 +14,7 @@
 <body>
   <div class="produto-container">
     <div class="ladex">
-      <h2-2> Hotelex</h2-2> <br>
+      <a href="./pagina_inicial.html"><h2-2>Hotelex</h2-2></a> <br>
       <span>RESERVE SEU REFÚGIO PERFEITO, ONDE CADA ESTADIA SE TORNA UMA EXPERIÊNCIA INESQUECÍVEL!</span>
     </div>
     <div class='container'>
@@ -129,11 +129,6 @@
           new MultiSelectTag('frutas2')
           new MultiSelectTag('frutas')  // id
       </script>
-      <p>
-        <a href="./pagina_inicial.html">
-          Tela Inicial
-        </a>
-      </p>
         <div class="file-list" id="fileList"></div>
         <div class='justify-center'>
           <button onclick='entrar()'>CADASTRAR</button>
