--- a/hotelex/assets/html/ficha_do_hotel.html
+++ b/hotelex/assets/html/ficha_do_hotel.html
@@ -15,7 +15,7 @@
             <i class="fa-light fa-reply"></i>
             </header>
             <div class="ladex">
-                <h2> Hotelex</h2> <br><br>
+                <a href="./pagina_inicial.html"><h2>Hotelex</h2></a><br><br>
                 <span>RESERVE SEU REFÚGIO PERFEITO, ONDE CADA ESTADIA SE TORNA UMA EXPERIÊNCIA INESQUECÍVEL!</span>
             </div>
             <div class='container'>
