--- a/hotelex/assets/html/anuncia.html
+++ b/hotelex/assets/html/anuncia.html
@@ -64,7 +64,7 @@
             <i class="fa-light fa-reply"></i>
             </header>
             <div class="ladex">
-                <h2> Hotelex</h2> <br>
+                <a href="./pagina_inicial.html"><h2>Hotelex</h2></a> <br>
                 <span>RESERVE SEU REFÚGIO PERFEITO, ONDE CADA ESTADIA SE TORNA UMA EXPERIÊNCIA<BR> INESQUECÍVEL!</span>
                     
                 <ul> 
@@ -113,11 +113,6 @@
 
                         
                     </div>
-                    <p>
-                        <a href="./pagina_inicial.html">
-                          Tela Inicial
-                        </a>
-                    </p>
                     <div class='justify-center'>
                         <a href="./dados_propri.html">
                             <button>Comece agora</button>
