--- a/hotelex/assets/html/signup.html
+++ b/hotelex/assets/html/signup.html
@@ -68,7 +68,7 @@
       <header>
       </header>
       <div class="ladex">
-        <h2> Hotelex</h2> <br>
+        <a href="./pagina_inicial.html"><h2>Hotelex</h2></a> <br>
         <span>RESERVE SEU REFÚGIO PERFEITO, ONDE CADA ESTADIA SE TORNA UMA EXPERIÊNCIA<BR> INESQUECÍVEL!</span>
           
         <ul> 
@@ -111,10 +111,6 @@
                 Já tem conta?
                 <a href="./signin.html">
                   Log-In
-                </a>
-                <br>
-                <a href="./pagina_inicial.html">
-                  Voltar para a página inicial
                 </a>
           </p>
           <br>
