--- a/hotelex/assets/html/pagina_inicial.html
+++ b/hotelex/assets/html/pagina_inicial.html
@@ -98,7 +98,7 @@
                 <div class="text"><h5-2-4>R$ 389</h5-2-4></div>
                 <div class="text"><h5-2-5>por diária
                     (inclui impostos e taxas)</h5-2-5></div>
-                <div class="ofertex5"><h3>Saiba mais</h3></div>
+                <div class="ofertex5"><a href='../html/ficha_do_hotel.php?cnpj=1234567890123'><h3>Saiba mais</h3></a></div>
             </div>
             <div class="box3">
                 <img src="../images/Hotel_Centro.png" alt="Imagem 8" class="custom-size4">
@@ -108,7 +108,7 @@
                 <div class="text"><h5-2-4>R$ 389</h5-2-4></div>
                 <div class="text"><h5-2-5>por diária 
                     (inclui impostos e taxas)</h5-2-5></div>
-                <div class="ofertex5"><h3>Saiba mais</h3></div>
+                <div class="ofertex5"><a href='../html/ficha_do_hotel.php?cnpj=3456789012345'><h3>Saiba mais</h3></a></div>
             </div>
             <div class="box3">
                 <img src="../images/Hotel_Brasil.png" alt="Imagem 8" class="custom-size4">
@@ -118,7 +118,7 @@
                 <div class="text"><h5-2-4>R$ 389</h5-2-4></div>
                 <div class="text"><h5-2-5>por diária 
                     (inclui impostos e taxas)</h5-2-5></div>
-                <div class="ofertex5"><h3>Saiba mais</h3></div>
+                <div class="ofertex5"><a href='../html/ficha_do_hotel.php?cnpj=56789012345678'><h3>Saiba mais</h3></a></div>
             </div>
             <div class="box3">
                 <img src="../images/Hotel_Collection.png" alt="Imagem 8" class="custom-size4">
@@ -128,7 +128,7 @@
                 <div class="text"><h5-2-4>R$ 389</h5-2-4></div>
                 <div class="text"><h5-2-5>por diária 
                     (inclui impostos e taxas)</h5-2-5></div>
-                <div class="ofertex5"><h3>Saiba mais</h3></div>
+                <div class="ofertex5"><a href='../php/ficha_do_hotel.php?cnpj=9012345678901'><h3>Saiba mais</h3></a></div>
             </div>
         </div>
         <div class="ofertex2"><h3>Ver ofertas</h3></div>
