--- a/hotelex/assets/html/signup.html
+++ b/hotelex/assets/html/signup.html
@@ -105,7 +105,7 @@
             </div>
           <div class='justify-center'>
             <!-- <button onclick='cadastrar()' name="submit">CADASTRAR</button> -->
-            <input class="submitex" type="submit" name="submit" value="Enviar">
+            <input class="submitex" type="submit" name="submit" value="Casdastrar">
           </div>
           <p>
                 Já tem conta?
